<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".JobFilter">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/jobfilter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/nameactivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile Information"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fill Your Personal Information Here"
            android:textSize="18sp"
            android:textColor="@color/textColorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/nameactivity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_input_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/register_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptiontext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Describe Yourself"
                android:textColor="@color/textColorPrimary"
                android:drawableStart="@drawable/ic_description"
                android:drawablePadding="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/employment_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select What Employment Type"
            android:textSize="16sp"
            android:textColor="@color/textColorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/description_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <Spinner
            android:id="@+id/employment_type_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/textColorPrimary"
            android:textStyle="bold"
            android:prompt="@string/employment_type_prompt"
            android:entries="@array/employment_types"
            app:layout_constraintTop_toBottomOf="@+id/employment_type_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_input_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/employment_type_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/locationtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Your Location (City, State)"
                android:textColor="@color/textColorPrimary"
                android:drawableStart="@drawable/ic_position"
                android:drawablePadding="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Skills Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/skills_input_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/location_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/requiredskills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Your Skills (separate with ,)"
                android:textColor="@color/textColorPrimary"
                android:drawableStart="@drawable/ic_skills"
                android:drawablePadding="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/experience_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Your Experience Level"
            android:textSize="16sp"
            android:textColor="@color/textColorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/skills_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <Spinner
            android:id="@+id/experience_type_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/textColorPrimary"
            android:prompt="@string/experience_type_prompt"
            android:entries="@array/experience_types"
            app:layout_constraintTop_toBottomOf="@+id/experience_type_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/education_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Your Education Level"
            android:textSize="16sp"
            android:textColor="@color/textColorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/experience_type_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Education Type Spinner -->
        <Spinner
            android:id="@+id/education_type_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/textColorPrimary"
            android:prompt="@string/education_type_prompt"
            android:entries="@array/education_types"
            app:layout_constraintTop_toBottomOf="@+id/education_type_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/error_while_registering"
            android:textColor="@color/errorColor"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/education_type_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="8dp"/>

        <Button
            android:id="@+id/submit"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:text="Submit"
            app:layout_constraintTop_toBottomOf="@+id/error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
